flight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlines-flight
  namespace: airlines-backend-microservices
  labels:
    app: airlines-flight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlines-flight
  template:
    metadata:
      labels:
        app: airlines-flight
    spec:
      containers:
        - name: airlines-flight
          image: default-route-openshift-image-registry.apps-crc.testing/airlines-backend-microservices/airlines-flight:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
